--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ body{
 #title{
     width: 100%;
     height: 100vh;
-    background-image: url("/Users/radhikajajoo/Desktop/m/image/mbg.gif");
+    background-image: url("image/mbg.gif");
     background-repeat: no-repeat;
     background-size: cover;
 }
